<resources>
    <string name="app_name">Gas Manager</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="indata">Insufficient data. The graph will appear when you add more then 3 refills</string>
    <string name="action_settings">Settings</string>
    <string name="nameedit">Car model</string>
    <string name="volume">Volume</string>
    <string name="price">Price</string>
    <string name="id">ID</string>
    <string name="paid">Paid</string>
    <string name="enter">Enter $</string>
    <string name="entervolume">Enter volume</string>
    <string name="enterkm">Enter km</string>
    <string name="distance">Distance</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="glass">Glass of milk</string>
    <string name="cup">Cup of coffee</string>
    <string name="fresh">Super healthy fresh</string>
    <string name="total">Total cost</string>
    <string name="date">Date</string>
    <string name="odoedit">Odometer</string>
    <string name="oiledit">Tank capacity</string>
    <string name="settings">Settings</string>
    <string name="name">Gas manager</string>
    <string name="cars">Cars management</string>
    <string name="records">Records management</string>
    <string name="advice">Advice</string>
    <string name="howto">How to use</string>
    <string name="about">About GasManager</string>
    <string name="feedback">Give feedback</string>
    <string name="donate">Give a tip</string>
    <string name="fueling">Enter fueling data</string>
    <string name="edit">Edit</string>
    <string name="delete">delete</string>
    <string name="exit">exit</string>
    <string name="add">Add first</string>
    <string name="deleteAll">delete all</string>
    <string name="developer">Developer - Viacheslav Kulish | Designer - Nikitos Marchenko</string>
    <string name="abouttext">Standing once again at the gas station, I thought that it would be cool to have an application in which I would record all the fuel costs and It would immediately show the expense, the amount of money spent and other useful statistics.    At this point, I decided that not alone I need such an instrument and decided to create GasManager.    I very much hope that I have made account of your embezzlement and the calculation of expenditure is a bit more convenient and pleasant. Thank you for using my application. I am pleased to :)</string>
    <string name="advicetitle1">Smoothly brake and gain speed</string>
    <string name="advicetitle2">Do not chase</string>
    <string name="advicetitle3">Do not take too much</string>
    <string name="advicetitle4">Do not use electrical appliances without the need</string>
    <string name="advicetitle5">Correct tire pressure</string>
    <string name="advice1">With a sharp start and braking you significantly increase fuel consumption. Gather speed smoothly. When braking, try to move more by inertia</string>
    <string name="advice2">If you are driving on an unexpected route, do not rush to gain high speed. It is better to maintain the cruising speed, as a rule - it\'s riding at the maximum gear for 2-2.5 thousand. in a minute</string>
    <string name="advice3">Every 40-50 kg. additional weight increase the consumption by 1-2 liters per 100 km. Therefore, think carefully before transporting the blue whale on your smart!</string>
    <string name="advice4">The included condenser, heating and charging iPhone can increase the consumption up to 15%. However, do not give up comfort for the sake of economy</string>
    <string name="advice5">The better the tires are pumped, the lower the consumption, but at the same time the lower will be the grip on the road</string>
    <string name="how1">Immediately after refueling, press the + button and enter the refueling data (the volume of fuel, the price per liter and the kilometer indicator on the odometer)     To accurately calculate the average flow, refuel at the minimum fue</string>
    <string name="how2">After adding 3 refills, you will have graphs with useful data under them.     Under the schedule with the average expense: the average expense for all the time and the last expense    Under the schedule with a distance: the number of kilometers for the entire time and for the current month    Under the schedule with the volume of fuel: the volume of fuel for all time and the average volume per month    Under the schedule with the price: the amount of money spent for all time and the average amount of money you spend per day</string>
    <string name="how3">If you liked the application, you can help the developer financially.    The application, for your convenience, is completely free, without restrictions and without advertising. I try for you and leave only in the negative.    If, suddenly you want to support me, you can click on the button at the bottom of the menu \"Donations\". You will go to the donation page and can choose the option that you like best. This services (costs: 0,99$, 1,99$ and 4,99) does not give any privileges, but every donation pushes me to create and work for you. The number of donations is unlimited. Thanks to everyone who supports me.</string>
    <string name="howtitle1">Add new recordings filling</string>
    <string name="howtitle2">Graphics and useful data</string>
    <string name="howtitle3">Developer support</string>
    <string name="mon1">Jan</string>
    <string name="mon2">Feb</string>
    <string name="mon3">Mar</string>
    <string name="mon4">Apr</string>
    <string name="mon5">May</string>
    <string name="mon6">Jun</string>
    <string name="mon7">Jul</string>
    <string name="mon8">Aug</string>
    <string name="mon9">Sep</string>
    <string name="mon10">Oct</string>
    <string name="mon11">Nov</string>
    <string name="mon12">Dec</string>
    <string name="tab1">Average expense</string>
    <string name="tab2">Overall distance</string>
    <string name="tab3">Total flooded</string>
    <string name="tab4">Total spent</string>
    <string name="title1">Last expense</string>
    <string name="title2">Daily</string>
    <string name="title3">Monthly</string>
    <string name="title4">Daily</string>
    <string name="maintab1">Expense</string>
    <string name="maintab2">Distance</string>
    <string name="maintab3">Volume</string>
    <string name="maintab4">Cost</string>
    <string name="km"> km</string>
    <string name="l"> l</string>
    <string name="currency">$ </string>
    <string name="lkm"> L/100km</string>
    <string name="advicemenu">Advice</string>
    <string name="currencyru">" "</string>
    <string name="nomenu">Soon, in next updates</string>
    <string name="entrybtn">Long press on entry to edit</string>
    <string name="app_license">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAkilLP638et5eTPjArDhEtQzb4mMFoYtaYxkXl4JDws9gQYqz6NZscwRrScWdyUuXyCiCL2OH6FnremxMZLsWtBP6QpnTFEJHTqLSwBchR04WfynG4HL0B0+G0EAqAqsSrvHJIULWVxX+uaPw55VZ45TvMIBGmwAssmCEa6c1owvLVOAe6LjF0VXoGs3RPCwYTq5vcpSGdwrW8O3pprrPpYaT/3ggHozh+BxfU0X7BVDnE/7v2fBCnIuFYM5JKhKAqa3faW9OA6rAb8CoDWRI1vqR7tIOS8Z8+zDdv2I7hbA2LnRK2H8/7u0RueDl9Tu0NOX+lCWVDH/1Mkj9UYinTwIDAQAB</string>
    <string name="thank_you">Thank you!</string>

</resources>
